# smartmove

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  cross_filesystem.py  directory_manager.py  file_mover.py  pyproject.toml  requirements-dev.txt  setup.py  smartmove.py  sonar-project.properties
.github/workflows/: ci.yml
demo/: README.md  same_fs_demo.sh
smartmove/: __init__.py  __main__.py  cli.py
smartmove/core/: __init__.py  filesystem.py  mover.py
smartmove/utils/: __init__.py  progress.py
tests/: test_cli.py  test_e2e.py  test_integration.py  test_unit.py
