[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smartmove"
version = "0.2.0"
description = "Cross-filesystem file mover with hardlink preservation"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Leonardo Puccio", email = "me@leonardopuccio.dev"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Filesystems",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/LeonardoPuccio/smartmove"

[project.scripts]
smv = "smartmove.cli:main"

[tool.setuptools]
packages = ["smartmove", "smartmove.core", "smartmove.utils"]

[tool.coverage.run]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:"
]